--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,9 +1,33 @@
 <form [formGroup]="form">
 
   <div class=" mb-3 text-center mt-5">
-    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    <button type="button" class="btn btn-primary mt-2" (click)="showRsvp()">RSVP</button>
+    <label for="textForRsvp" class="form-label">Texto para RSVP</label>
+    <textarea class="form-control" id="textForRsvp" rows="10"
+      formControlName="textForRsvp"></textarea>
+    <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal"
+      data-bs-target="#exampleModal">RSVP</button>
   </div>
 
 </form>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
