--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -5,7 +5,7 @@
     <textarea class="form-control" id="textForRsvp" rows="10"
       formControlName="textForRsvp"></textarea>
     <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal"
-      data-bs-target="#exampleModal">RSVP</button>
+      data-bs-target="#RSVPModal" (click)="showRsvp()">RSVP</button>
   </div>
 
 </form>
@@ -13,16 +13,12 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="RSVPModal" tabindex="-1" aria-labelledby="RSVPModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
       <div class="modal-body">
-        ...
+        <h1 class="text-center mt-5">{{showedWord}}</h1>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
