--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<div class="container">
-  <router-outlet />
+<div id="container">
+  <div id="header">
+    <navbar-component></navbar-component>
+  </div>
+  <div id="body" style="margin-top: 5rem !important;">
+    <div class="container main-container">
+
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
+  <div id="footer" style="margin-bottom: 10rem !important;">
+    <footer-component></footer-component>
+  </div>
+
 </div>
