--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,5 +7,13 @@
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ms-auto d-flex justify-content-between align-items-end">
+        <li class="nav-item active" data-bs-target="#navbarResponsive" data-bs-toggle="collapse">
+          <a class="nav-link" [routerLink]="['/how-works']" [skipLocationChange]="true">¿Cómo
+            funciona?</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
