--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,65 +1,5 @@
-<div class="row">
-
-  <div class="col-sm text-start">
-
-    <div class="accordion" id="firstAccordion">
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <div class="row">
-            <div class="col-sm">
-              <button class="btn btn-primary btn-sm m-1" type="button" data-bs-toggle="collapse"
-                data-bs-target="#howWorks" aria-expanded="true" aria-controls="howWorks">
-                <i class="bi bi-question-circle-fill" title="¿Cómo funciona?"></i> ¿Cómo funciona?
-              </button>
-            </div>
-          </div>
-        </div>
-        <div id="howWorks" class="accordion-collapse collapse" data-bs-parent="#firstAccordion">
-          <div class="accordion-body">
-            <p>Pega el texto que quieras leer en la caja adjunta y
-              pulsa el botón 'Velocileer'. Después de un segundo el texto comenzará a mostrarse ante
-              tus ojos palabra
-              a palabra y comprobarás como puedes leerlo mucho más rápido que en la lectura
-              convencional
-            </p>
-            <p>Por defecto la aplicación muestra las palabras a una cadencia de 500 por minuto, pero
-              puedes aumentar o disminuir
-              la velocidad desde el deslizador que se muestra al pulsar en 'Configuración'
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm">
-    <div class="accordion" id="secondAccordion">
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <div class="row">
-            <div class="col-sm">
-              <div class="d-flex flex-row-reverse">
-                <button class="btn btn-primary btn-sm m-1" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#configuration" aria-expanded="true"
-                  aria-controls="configuration">
-                  Configuración <i class="bi bi-gear-fill" title="Configuración"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="configuration" class="accordion-collapse collapse"
-          data-bs-parent="#secondAccordion">
-          <div class="accordion-body">
-            <label for="customRange2" class="form-label">Pálabras por minúto: {{wpm}}</label>
-            <input type="range" class="form-range" [(ngModel)]="wpm" min="60" max="2000"
-              id="customRange2">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
+<label for="customRange2" class="form-label">Pálabras por minúto: {{wpm}}</label>
+<input type="range" class="form-range" [(ngModel)]="wpm" min="60" max="2000" id="customRange2">
 
 <form [formGroup]="form">
 
@@ -71,6 +11,10 @@
       data-bs-target="#RSVPModal" (click)="showRsvp()">Velocileer</button>
   </div>
 
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button class="btn btn-secondary btn-sm" type="button" (click)="loadTestText()">Cargar texto de
+      prueba</button>
+  </div>
 </form>
 
 
