--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,5 +1,14 @@
-<label for="customRange2" class="form-label">Pálabras por minúto: {{wpm}}</label>
-<input type="range" class="form-range" [(ngModel)]="wpm" min="60" max="2000" id="customRange2">
+<div class="row">
+  <div class="col"><label for="wpm" class="form-label">Pálabras por minúto: {{wpm}}</label>
+    <input type="range" class="form-range" [(ngModel)]="wpm" min="60" max="2000" id="wpm">
+  </div>
+  <div class="col"><label for="fontSize" class="form-label">Tamaño de texto: {{fontSize}}</label>
+    <input type="range" class="form-range" [(ngModel)]="fontSize" min="2" max="10" id="fontSize">
+  </div>
+</div>
+
+
+
 
 <form [formGroup]="form">
 
@@ -25,7 +34,8 @@
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content">
       <div class="modal-body centerScreen">
-        <h1 class="text-center">{{showedWord}}</h1>
+        <div class="text-center" [style.font-size.vw]="fontSize">
+          {{showedWord}}</div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
