--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,9 +1,11 @@
 <div class="row">
-  <div class="col"><label for="wpm" class="form-label">Pálabras por minúto: {{wpm}}</label>
+  <div class="col"><label for="wpm" class="form-label">Pálabras por minúto: </label>
     <input type="range" class="form-range" [(ngModel)]="wpm" min="60" max="2000" id="wpm">
+    <div class="text-center">{{wpm}}</div>
   </div>
-  <div class="col"><label for="fontSize" class="form-label">Tamaño de texto: {{fontSize}}</label>
+  <div class="col"><label for="fontSize" class="form-label">Tamaño de texto:</label>
     <input type="range" class="form-range" [(ngModel)]="fontSize" min="2" max="10" id="fontSize">
+    <div class="text-center">{{fontSize}}</div>
   </div>
 </div>
 
@@ -21,24 +23,61 @@
   </div>
 
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-    <button class="btn btn-secondary btn-sm" type="button" (click)="loadTestText()">Cargar texto de
+    <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal"
+      data-bs-target="#testTextModal">Cargar texto de
       prueba</button>
   </div>
 </form>
 
+<!-- Modal de textos de ejemplo-->
+<div class="modal fade" id="testTextModal" tabindex="-1" aria-labelledby="testTextModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="testTextModalLabel">Seleccione un texto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
 
 
-<!-- Modal -->
+        <ul class="list-group">
+          @for (testText of testTexts; track testText; let index = $index) {
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            {{testText.title}} de {{testText.author}}
+            <span role='button' class="badge text-bg-primary rounded-pill"
+              (click)="loadTestText(index)" data-bs-dismiss="modal">Cargar</span>
+          </li>
+          }
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal de lectura-->
 <div class="modal fade" id="RSVPModal" tabindex="-1" aria-labelledby="RSVPModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content">
+      <div class="row">
+        <div class="col-sm">
+          <div class="d-flex flex-row-reverse">
+            <button (click)="pauseIt()" class="btn btn-primary m-3 btn-lg">
+              <i [ngClass]="pause ? 'bi bi-play-circle-fill' : 'bi-pause-btn-fill'"
+                [title]="pause ? 'Reproducir' : 'Pausar'"></i>
+            </button>
+
+          </div>
+        </div>
+      </div>
       <div class="modal-body centerScreen">
         <div class="text-center" [style.font-size.vw]="fontSize">
           {{showedWord}}</div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+          (click)="closeModal()">Cerrar</button>
       </div>
     </div>
   </div>
