--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,6 +10,15 @@
     <div class="text-center">{{readService.fontSize}}</div>
   </div>
 </div>
+<div class="row">
+  <div class="col text-center">
+    <input class="form-check-input" type="checkbox" value="" id="punctuationPauses"
+      [(ngModel)]="readService.punctuationPauses">
+    <label class="form-check-label" for="punctuationPauses">
+      &nbsp; Pausa en puntuación
+    </label>
+  </div>
+</div>
 
 
 
