--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col text-center">
+  <div class="col">
     <input class="form-check-input" type="checkbox" value="" id="punctuationPauses"
       [(ngModel)]="readService.punctuationPauses">
     <label class="form-check-label" for="punctuationPauses">
