--- a/src/app/pages/read/read.component.html
+++ b/src/app/pages/read/read.component.html
@@ -1,5 +1,9 @@
 <div class="container">
 
+  @if(pause){
+  <app-read-config></app-read-config>
+  }
+
   <div class="row">
     <div class="col-sm">
       <div class="d-flex flex-row-reverse">
