--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -32,7 +32,7 @@
         <ul class="list-group">
           @for (testText of testTexts; track testText; let index = $index) {
           <li class="list-group-item d-flex justify-content-between align-items-center">
-            {{testText.title}} de {{testText.author}}
+            {{testText.title}} de {{testText.author}} <br>({{testText.words}} palabras)
             <span role='button' class="badge text-bg-primary rounded-pill"
               (click)="loadTestText(index)" data-bs-dismiss="modal">Cargar</span>
           </li>
