--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,10 @@
+@if(alert){
+<div class="alert alert-danger" role="alert">
+  {{alert}}
+</div>
+}
+
+
 <app-read-config></app-read-config>
 
 <form [formGroup]="form">
