--- a/src/app/pages/read/read.component.html
+++ b/src/app/pages/read/read.component.html
@@ -11,19 +11,21 @@
   <div class="modal-body centerScreen">
     <div class="text-center textBoxHeight mt-5" [style.font-size.vw]="readService.fontSize">
       {{showedWord}}</div>
-    <div class="text-center">
-      <span class="badge rounded-pill bg-primary me-1" *ngIf="pause"><i
-          class="bi bi-chevron-double-left" (click)="move(-5)"></i></span>
-      <span class="badge rounded-pill bg-primary me-1" *ngIf="pause"><i class="bi bi-chevron-left"
-          (click)="move(-1)"></i></span>
+    <div class="text-center" *ngIf="!isFinished">
+      <button class="btn btn-sm btn-primary me-1" *ngIf="pause" [disabled]="steps < 5"><i
+          class="bi bi-chevron-double-left" (click)="move(-5)"
+          title="Retroceder 5 palabras"></i></button>
+      <button class="btn btn-sm btn-primary me-1" *ngIf="pause" [disabled]="steps < 1"><i
+          class="bi bi-chevron-left" (click)="move(-1)" title="Retroceder 1 palabra"></i></button>
       <button (click)="pauseIt()" class="btn btn-primary m-3 btn-lg">
         <i [ngClass]="pause ? 'bi bi-play-circle-fill' : 'bi-pause-btn-fill'"
           [title]="pause ? 'Reproducir' : 'Pausar'"></i>
       </button>
-      <span class="badge rounded-pill bg-primary me-1" *ngIf="pause"><i class="bi bi-chevron-right"
-          (click)="move(1)"></i></span>
-      <span class="badge rounded-pill bg-primary me-1" *ngIf="pause"><i
-          class="bi bi-chevron-double-right" (click)="move(5)"></i></span>
+      <button class="btn btn-sm btn-primary me-1" *ngIf="pause"><i class="bi bi-chevron-right"
+          (click)="move(1)" title="Avanzar 1 palabra"></i></button>
+      <button class="btn btn-sm btn-primary me-1" *ngIf="pause"><i
+          class="bi bi-chevron-double-right" (click)="move(5)"
+          title="Avanzar 5 palabras"></i></button>
     </div>
   </div>
 
