--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,9 +10,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ms-auto d-flex justify-content-between align-items-end">
+
         <li class="nav-item active" data-bs-target="#navbarResponsive" data-bs-toggle="collapse">
           <a class="nav-link" [routerLink]="['/how-works']" [skipLocationChange]="true">¿Cómo
             funciona?</a>
+        </li>
+        <li class="nav-item active" data-bs-target="#navbarResponsive" data-bs-toggle="collapse">
+          <a class="nav-link" [routerLink]="['/read-test']" [skipLocationChange]="true">Test
+            velocidad de lectura</a>
         </li>
       </ul>
     </div>
