--- a/src/app/components/selection-modal/selection-modal.component.html
+++ b/src/app/components/selection-modal/selection-modal.component.html
@@ -16,7 +16,7 @@
             <h6>
               <span role='button' class="badge text-bg-primary rounded-pill"
                 (click)="loadTestText(index)" data-bs-dismiss="modal">Cargar en Velocilector</span>
-              <span role='button' class="badge text-bg-primary rounded-pill ms-2"
+              <span role='button' class="badge text-bg-secondary rounded-pill ms-2"
                 (click)="readTest(index)" data-bs-dismiss="modal">Test
                 velocidad de lectura</span>
             </h6>
