--- a/src/app/pages/read-test/read-test.component.html
+++ b/src/app/pages/read-test/read-test.component.html
@@ -11,7 +11,7 @@
 <div class="alert alert-success" role="alert">
   El test de lectura muestra el texto seleccionado al pulsar sobre el botón de 'Comenzar'. Cuando lo
   haga comience a leer como lo haría normalmente.
-  Al finalizar pulse el botón que 'Terminar' que encontra al final del texto y calcularemos su
+  Al finalizar pulse el botón 'Terminar' que encontra al final del texto y calcularemos su
   velocidad de lectura.
 </div>
 
@@ -38,7 +38,7 @@
 } @else{
 
 <p class="text-center fw-bold">
-  Has leído {{readService.testText.words}} palabras en {{readingSeconds}} segundos
+  Tú velocidad de lectura es de {{wpm}} palabras por minuto
 </p>
 <p class="text-center">
   <button type="button" class="btn btn-primary" (click)="reStart()">Volver a comenzar</button>
@@ -47,6 +47,11 @@
 
 }
 }
+
+<div class="modal-footer">
+  <span type="button" class="badge bg-primary" (click)="return()"><i
+      class="bi bi-arrow-return-left"></i> Volver a velocilector</span>
+</div>
 
 
 <!-- Modal de textos de ejemplo-->
